refactor: 검색 서비스 개선 및 로깅 시스템 도입
- 예외 처리 강화
- 코드 구조 정리
- 로그 기록